--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
         left: auto;    /* ← THIS is the missing piece */
         right: auto;
       }
+        
+    .center-left {
+        display: none;   /* hide “Food & Drink” on phones */
+    }
 
       .bottom-right {
         right: auto;          /* cancel desktop positioning */
