--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       top: 6%;
       left: 5%;
     }
-
-    .center-left {
-      top: 50%;
-      left: 5%;
-    }
+      
+    /* Hide “Food & Drink” on tablets AND phones */
+  .center-left {
+    display: none;
+  }
 
     .bottom-left {
       left: 5%;
