--- a/info.html
+++ b/info.html
@@ -127,8 +127,11 @@
         <p>A light lunch will be served.</p>
 
         <h2>RSVP</h2>
-        <p>Let us know who's coming by emailing <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>.</p>
+        <p>Let us know who's coming by emailing Natalie at <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>.</p>
 
+        <h2>Streaming</h2>
+        <p>We intend to stream it live on Zoom and make it available for later viewing. Check back here for details.</p>
+        
         <h2>Driving Directions</h2>
         <p>
             The Brazilian Room is located in Tilden Regional Park
@@ -184,8 +187,8 @@
  
         <h2>Questions</h2>
         <p style="margin-bottom:4rem;">
-            If you have questions, please email
-            <a href="mailto:ferd2026@gmail.com">ferd2026@gmail.com</a>
+            If you have questions, email Natalie
+            <a href="mailto:natleim@gmail.com">natleim@gmail.com</a> or phone her at (510) 542-7446.
             <br><br><a href="index.html">&laquo; Back</a>
 
     </div>
