--- a/info.html
+++ b/info.html
@@ -124,7 +124,7 @@
         <p>The Brazilian Room in Tilden Park, on the eastern edge of Berkeley, California.</p>
 
         <h2>Food &amp; Drink</h2>
-        <p>A light lunch will be served.</p>
+        <p>There will be comestibles and libations.</p>
 
         <h2>RSVP</h2>
         <p>Let us know who's coming by emailing Natalie at <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>.</p>
