--- a/info.html
+++ b/info.html
@@ -188,7 +188,7 @@
         <h2>Questions</h2>
         <p style="margin-bottom:4rem;">
             If you have questions, email Natalie
-            <a href="mailto:natleim@gmail.com">natleim@gmail.com</a> or phone her at (510) 542-7446.
+            (<a href="mailto:natleim@gmail.com">natleim@gmail.com</a>) or phone her at (510) 542-7446.
             <br><br><a href="index.html">&laquo; Back</a>
 
     </div>
