--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     top: 46%;
     left: 2%;
     font-size: clamp(1.6rem, 3.5vw, 3rem);
+    display: none;
   }
 
   .bottom-left {
@@ -167,6 +168,7 @@
     </span>
   </div>
 
+ 
   <div class="overlay-text center-left">
     Food &amp; Drink
   </div>
