--- a/info.html
+++ b/info.html
@@ -130,7 +130,17 @@
         <p>Let us know who's coming by emailing Natalie at <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>.</p>
 
         <h2>Streaming</h2>
-        <p>We intend to stream it live on Zoom and make it available for later viewing. Check back here for details.</p>
+        <p>We intend to stream the event live and make it available for later viewing. Check back here for details.</p>
+        
+        <p>If you can't attend and want to share something about Ferd, send a video! Here are some guidelines:</p>
+        <ul style="list-style-type:square;">
+             <li>Record in horizontal format. If using a phone, turn it sideways </li>
+             <li>Make sure a light source is facing you and is not behind you</li>
+             <li>Record indoors in a quiet place</li>
+             <li>Try to keep it under five minutes long</li>
+             <li>If your video file is under 25MB you can just attach it to an email; If your file is larger, upload it to a cloud service (e.g. Google Drive, Dropbox, iCloud) and share the link in an email</li> 
+             <li>Send your submissions to <a href="mailto:kristin.leimkuhler@gmail.com">kristin.leimkuhler@gmail.com</a> by Sunday, May 31st</li>
+        </ul> 
         
         <h2>Driving Directions</h2>
         <p>
