--- a/info.html
+++ b/info.html
@@ -139,7 +139,7 @@
              <li>Record indoors in a quiet place</li>
              <li>Try to keep it under five minutes long</li>
              <li>If your video file is under 25MB you can just attach it to an email; If your file is larger, upload it to a cloud service (e.g. Google Drive, Dropbox, iCloud) and share the link in an email</li> 
-             <li>Send your submissions to <a href="mailto:kristin.leimkuhler@gmail.com">kristin.leimkuhler@gmail.com</a> by Sunday, May 31st</li>
+             <li>Send your video to <a href="mailto:kristin.leimkuhler@gmail.com">kristin.leimkuhler@gmail.com</a> by Sunday, May 31st</li>
         </ul> 
         
         <h2>Driving Directions</h2>
