--- a/info.html
+++ b/info.html
@@ -134,7 +134,7 @@
         
         <p>If you can't attend and want to share something about Ferd, send a video! Here are some guidelines:</p>
         <ul style="list-style-type:square;">
-             <li>Record in horizontal format. If using a phone, turn it sideways </li>
+             <li>Record in horizontal format; If using a phone, turn it sideways </li>
              <li>Make sure a light source is facing you and is not behind you</li>
              <li>Record indoors in a quiet place</li>
              <li>Try to keep it under five minutes long</li>
