--- a/info.html
+++ b/info.html
@@ -137,6 +137,7 @@
              <li>Record in horizontal format; If using a phone, turn it sideways </li>
              <li>Make sure a light source is facing you and is not behind you</li>
              <li>Record indoors in a quiet place</li>
+             <li>Begin your video by saying your name and how you knew Ferd</li>            
              <li>Try to keep it under five minutes long</li>
              <li>If your video file is under 25MB you can just attach it to an email; If your file is larger, upload it to a cloud service (e.g. Google Drive, Dropbox, iCloud) and share the link in an email</li> 
              <li>Send your video to <a href="mailto:kristin.leimkuhler@gmail.com">kristin.leimkuhler@gmail.com</a> by Sunday, May 31st</li>
