--- a/info.html
+++ b/info.html
@@ -143,6 +143,8 @@
              <li>Send your video to <a href="mailto:kristin.leimkuhler@gmail.com">kristin.leimkuhler@gmail.com</a> by Sunday, May 31st</li>
         </ul> 
         
+        <p>You can also send something you've written for us to read for you! Send your written remembrance to <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>. </p>
+        
         <h2>Driving Directions</h2>
         <p>
             The Brazilian Room is located in Tilden Regional Park
