--- a/info.html
+++ b/info.html
@@ -132,7 +132,8 @@
         <h2>Streaming</h2>
         <p>We intend to stream the event live and make it available for later viewing. Check back here for details.</p>
         
-        <p>If you can't attend and want to share something about Ferd, send a video! Here are some guidelines:</p>
+        <h2>Participation</h2>
+        <p>There'll be an opportunity to speak, for anyone who wants to, at the event. If you can't attend and want to share something, send a video! Here are some guidelines:</p>
         <ul style="list-style-type:square;">
              <li>Record in horizontal format; If using a phone, turn it sideways </li>
              <li>Make sure a light source is facing you and is not behind you</li>
