--- a/info.html
+++ b/info.html
@@ -124,7 +124,7 @@
         <p>The Brazilian Room in Tilden Park, on the eastern edge of Berkeley, California.</p>
 
         <h2>Food &amp; Drink</h2>
-        <p>There will be comestibles and libations.</p>
+        <p>Refreshments will be served.</p>
 
         <h2>RSVP</h2>
         <p>Let us know who's coming by emailing Natalie at <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>.</p>
@@ -133,7 +133,7 @@
         <p>We intend to stream the event live and make it available for later viewing. Check back here for details.</p>
         
         <h2>Participation</h2>
-        <p>There'll be an opportunity to speak, for anyone who wants to, at the event. If you can't attend and want to share something, send a video! Here are some guidelines:</p>
+        <p>There'll be an opportunity to speak, for anyone who wants to, at the event. If you can't attend in person and want to share something, send a video! Here are some guidelines:</p>
         <ul style="list-style-type:square;">
              <li>Record in horizontal format; If using a phone, turn it sideways </li>
              <li>Make sure a light source is facing you and is not behind you</li>
