--- a/info.html
+++ b/info.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
     <title>All The Details</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -127,7 +128,7 @@
         <p>Refreshments will be served.</p>
 
         <h2>RSVP</h2>
-        <p>Let us know who's coming by emailing Natalie at <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>.</p>
+        <p>Let us know who's coming by emailing Kristin at <a href="mailto:leimgal@gmail.com">leimgal@gmail.com</a>.</p>
 
         <h2>Streaming</h2>
         <p>We intend to stream the event live and make it available for later viewing. Check back here for details.</p>
@@ -141,10 +142,10 @@
              <li>Begin your video by saying your name and how you knew Ferd</li>            
              <li>Try to keep it under five minutes long</li>
              <li>If your video file is under 25MB you can just attach it to an email; If your file is larger, upload it to a cloud service (e.g. Google Drive, Dropbox, iCloud) and share the link in an email</li> 
-             <li>Send your video to <a href="mailto:kristin.leimkuhler@gmail.com">kristin.leimkuhler@gmail.com</a> by Sunday, May 31st</li>
+             <li>Send your video to Kristin at <a href="mailto:leimgal@gmail.com">leimgal@gmail.com</a> by Sunday, May 31st</li>
         </ul> 
         
-        <p>You can also send something you've written for us to read for you! Send your written remembrance to <a href="mailto:natleim@gmail.com">natleim@gmail.com</a>. </p>
+        <p>You can also send something you've written for us to read for you! Send your written remembrance to Kristin at <a href="mailto:leimgal@gmail.com">leimgal@gmail.com</a>.</p>
         
         <h2>Driving Directions</h2>
         <p>
@@ -201,8 +202,8 @@
  
         <h2>Questions</h2>
         <p style="margin-bottom:4rem;">
-            If you have questions, email Natalie
-            (<a href="mailto:natleim@gmail.com">natleim@gmail.com</a>) or phone her at (510) 542-7446.
+            If you have questions, email Kristin 
+            (<a href="mailto:leimgal@gmail.com">leimgal@gmail.com</a>) or phone her at (510) 847-0631‬.
             <br><br><a href="index.html">&laquo; Back</a>
 
     </div>
