--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="noindex, nofollow">
     <title>All The Details</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
