--- a/info.html
+++ b/info.html
@@ -203,8 +203,8 @@ p, a, strong, div, li {
 </ul>
 
 <p>
-    You can also send something you've written for us to read for you.
-    Email written remembrances to
+    You can also send something you've written for us to read for you!
+    Email your written remembrance to
     <a href="mailto:leimgal@gmail.com">leimgal@gmail.com</a>.
 </p>
 
