--- a/info.html
+++ b/info.html
@@ -198,8 +198,8 @@ p, a, strong, div, li {
     <li>Record indoors in a quiet place</li>
     <li>Begin your video by saying your name and how you knew Ferd</li>
     <li>Try to keep it under five minutes long</li>
-    <li>If your video file is under 25MB, attach it to an email; otherwise upload it to a cloud service and share the link</li>
-    <li>Send your video by Sunday, May 31st</li>
+    <li>If your video file is under 25MB, attach it to an email; otherwise upload it to a cloud service and send us a link</li>
+    <li>Send your video by Sunday, May 31st to Kristin at <a href="mailto:leimgal@gmail.com">leimgal@gmail.com</a></li>
 </ul>
 
 <p>
