--- a/info.html
+++ b/info.html
@@ -171,7 +171,7 @@ p, a, strong, div, li {
 <p>The Brazilian Room in Tilden Park, on the eastern edge of Berkeley, California.</p>
 
 <h2>Food &amp; Drink</h2>
-<p>Refreshments will be served.</p>
+<p>Refreshments/light fare will be served.</p>
 
 <h2>RSVP</h2>
 <p>
@@ -235,7 +235,8 @@ p, a, strong, div, li {
         Right on Rose one block to Spruce St.<br>
         Left on Spruce and go about 1.5 miles to the stop sign at Grizzly Peak Blvd.<br>
         Continue straight across Grizzly Peak Blvd. and Spruce becomes Wildcat Canyon Road<br>
-        Continue for two miles and the Brazilian Room will be on your left
+        Continue for two miles and the Brazilian Room will be on your left<br>
+        If you pass South Park Drive you've gone too far
     </div>
 </div>
 
