--- a/info.html
+++ b/info.html
@@ -211,11 +211,11 @@ p, a, strong, div, li {
 <h2>Driving Directions</h2>
 <p>
     The Brazilian Room is located in Tilden Regional Park at the intersection of
-    Wildcat Canyon and Shasta Roads.
-    <br>
+    Wildcat Canyon and Shasta Roads. 
+    
     <a target="_blank"
        href="https://www.google.com/maps/place/Wildcat+Canyon+Rd+&+Shasta+Rd,+California+94708">
-        View on Google Maps
+        Google Map
     </a>
 </p>
 
