--- a/info.html
+++ b/info.html
@@ -165,7 +165,7 @@ p, a, strong, div, li {
 <h1>Ferd Leimkuhler Memorial Celebration</h1>
 
 <h2>When</h2>
-<p>Friday, June 12, 2026, Noon to 2pm.</p>
+<p>Friday, June 12, 2026, Noon to 2pm (PT).</p>
 
 <h2>Where</h2>
 <p>The Brazilian Room in Tilden Park, on the eastern edge of Berkeley, California.</p>
